[package]
name = "seed-recovery-rs"
version = "0.2.0"
edition = "2021"
authors = ["Admuad <admuad@claw.dev>"]
license = "MIT"
description = "Professional multi-chain seed phrase recovery tool - recover lost wallet keys by brute-forcing 1-3 missing words from BIP-39 seed phrases with parallel processing"
repository = "https://github.com/Admuad/seed-recovery-rs"
keywords = ["seed-recovery", "wallet", "bip39", "mnemonic", "crypto", "ethereum", "solana", "sui", "aptos", "blockchain"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
bip39 = "2.2"
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
sha3 = "0.10"

# Parallel processing for performance
rayon = "1.11"

# EVM support - k256 + secp256k1
k256 = "0.13"
secp256k1 = "0.27"

# Ed25519 signature for Sui/Aptos/Solana
ed25519-dalek = "2.0"

# Base58 for Solana
bs58 = "0.5"

# RPC client for balance checking
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
